network-manager-applet (1.0.2-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Tue, 05 May 2015 17:56:58 +0200

network-manager-applet (1.0.0-3) unstable; urgency=medium

  * Upload to unstable.

 -- Michael Biebl <biebl@debian.org>  Mon, 27 Apr 2015 16:43:02 +0200

network-manager-applet (1.0.0-2) experimental; urgency=medium

  * Install typelib files into multiarch paths now that gobject-introspection
    supports that.
  * Mark dev and gir packages as Multi-Arch: same.

 -- Michael Biebl <biebl@debian.org>  Mon, 09 Feb 2015 00:49:43 +0100

network-manager-applet (1.0.0-1) experimental; urgency=medium

  * New upstream release.
  * Rebase patches.
  * Bump dependency on network-manager and related dev packages to (>= 1.0.0).
  * Bump Standards-Version to 3.9.6. No further changes.
  * Update Vcs-Browser URL to use cgit and https.
  * Update Homepage URL to use https.

 -- Michael Biebl <biebl@debian.org>  Mon, 02 Feb 2015 13:40:08 +0100

network-manager-applet (0.9.10.0-2) unstable; urgency=medium

  * Disable bluetooth support. The gnome-bluetooth plugin no longer builds
    with gnome-bluetooth 3.12. But this plugin is really only useful for DUN
    which with bluez 5 isn't supported (yet).
    PAN support should still be functional.

 -- Michael Biebl <biebl@debian.org>  Wed, 16 Jul 2014 01:31:23 +0200

network-manager-applet (0.9.10.0-1) unstable; urgency=medium

  * New upstream release.
  * Update Build-Depends as per configure.ac.
  * Drop obsolete --with-gtkver configure switch.
  * Refresh patches.
  * Update symbols file. A few deprecated symbols were dropped which were used
    in older versions of network-manager-gnome, so add a versioned Breaks.
  * Exclude libtool .la files and static libraries from list-missing.

 -- Michael Biebl <biebl@debian.org>  Thu, 10 Jul 2014 07:32:44 +0200

network-manager-applet (0.9.8.10-1) unstable; urgency=medium

  * New upstream release.
  * Update patches.