@@ -8,19 +8,20 @@ instead of an offline icon.
 
 Closes: #471191
 ---
- src/applet.c | 3 +++
- 1 file changed, 3 insertions(+)
+ src/applet.c | 4 ++++
+ 1 file changed, 4 insertions(+)
 
 diff --git a/src/applet.c b/src/applet.c
-index c69232f..1c7748a 100644
+index 39ea8e4..0a1043b 100644
 --- a/src/applet.c
 +++ b/src/applet.c
-@@ -2950,6 +2950,9 @@ applet_update_icon (gpointer user_data)
+@@ -2952,6 +2952,10 @@ applet_update_icon (gpointer user_data)
  		break;
  	default:
  		applet_get_device_icon_for_state (applet, &pixbuf, &icon_name, &dev_tip);
 +		if (!pixbuf && state == NM_STATE_CONNECTED) {
-+			pixbuf = g_object_ref (nma_icon_check_and_load ("nm-device-wired", applet));
++			icon_name = g_strdup ("nm-device-wired");
++			pixbuf = g_object_ref (nma_icon_check_and_load (icon_name, applet));
 +		}
  		break;
  	}
