@@ -1,6 +1,7 @@
 network-manager-applet (1.0.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Rebase patches.
 
  -- Michael Biebl <biebl@debian.org>  Tue, 05 May 2015 17:56:58 +0200
 
